<resources>
    <string name="app_name">Swaasthya Setu</string>
    <string name="toast_error">Something went wrong!!! Please check your Internet connection.</string>
    <string name="skip">SKIP</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="demo_txt">Demo txt</string>
    <string name="search_txt">Search for Products, Doctors, Lab</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="orders">Orders</string>
    <string name="you">You</string>
    <string name="call">Call</string>
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="hello_guest">Hello, Guest</string>
    <string name="here_pincode">Here-Pincode</string>
    <string name="imageview">Imageview</string>
    <string name="return_cancellation_and_refund_policy">Return, Cancellation and Refund Policy</string>
    <string name="faq">FAQ</string>
    <string name="delivery">Delivery</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legal_amp_about"><![CDATA[Legal & About]]></string>
    <string name="offer_products">Offer Products</string>
    <string name="share_in">Share In</string>
    <string name="feedback">Feedback</string>
    <string name="request_a_product">Request a Product</string>
    <string name="rate_us">Rate Us</string>
    <string name="review_products">Review Products</string>
    <string name="return_">Return</string>
    <string name="order">Order</string>
    <string name="buy_again">Buy Again</string>
    <string name="household_supplies">Household Supplies</string>
    <string name="reorder_medicine">Reorder Medicine</string>
    <string name="order_by_prescription">Order By Prescription</string>
    <string name="order_medicine">Order Medicine</string>
    <string name="fab">fab</string>
    <string name="health_records">Health Records</string>
    <string name="my_lab_booking">My Lab Booking</string>
    <string name="health_record">Health Record</string>

    <string name="no_notification_at_the_moment">No <b>Notification</b> at the moment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="diet_clinic">Diet Clinic</string>
    <string name="dnavita">DNAVITE</string>
    <string name="generic_medicines">Generic Medicines</string>
    <string name="consuilt_doctor_online">Consuilt Doctor Online</string>
    <string name="medicine_subsitute">Medicine &amp; Substitute</string>
    <string name="read_health">Read Health Articles </string>
    <string name="listen_helth">Listen Health Articles</string>
    <string name="health_tools">Health Tools</string>
    <string name="symptom_checker">Symptom Checker</string>
    <string name="personify">Personify</string>
<<<<<<< HEAD
    <string name="camera">Camera</string>
    <string name="saved_prescriptions">Saved\nPrescriptions</string>
    <string name="gallery">Gallery</string>
    <string name="upload_prescription_via_whatsapp">Upload Prescription Via Whatsapp.</string>
    <string name="_91_99xxxxxxxx">+91–99xxxxxxxx</string>
    <string name="valid_prescription_guide">
        <b>Valid Prescription Guide</b> \n
        &#8226; Supported files type: <b>jpg, jpeg, png, pdf</b> \n
        &#8226; Images and pdf cannot be uploaded at the same time \n
        &#8226; Maximum allowed file size: <b>5mb</b> \n
        &#8226; Maximum image: <b>4</b> for each upload \n
        &#8226; Maximum pdf file: <b>1</b> for each upload \n
        &#8226; Avoid blurred image \n
        &#8226; Prescription uploaded is subject to verification \n
    </string>
    <string name="prescription_protection">
        Your uploaded prescription is secure &amp; private. Only a pharmacist will review it.
    </string>
    <string name="check">Check</string>
    <string name="order_note">Order Note</string>
    <string name="preferred_contact_number_optional">Preferred Contact Number (optional)</string>
    <string name="swaasthya_setu_communi">
        Swaasthya Setu is a communication medium. All orders are accepted and fulfilled by independent licensed
        chemist subject to verification of Valid Prescription by the said chemist By accepting Terms and Conditions
        to use this Technology Service, you hereby confirm that you are placing order only for fulfillment of valid prescription.
    </string>
    <string name="hereby_declare">
        I hereby declare that I have placed this order for fulfillment of valid prescription. I agree to all the terms and conditions.
    </string>
    <string name="submit">SUBMIT</string>


=======
 <!--  you part -->
    <string name="number">1234567896</string>
    <string name="my_order">My Order</string>
    <string name="manage_family_members">Manage Family Members</string>
    <string name="payments">Payments</string>
    <string name="my_health_buddy">My Health Buddy</string>
    <string name="my_address">My Address</string>
    <string name="yana_dietition_appointment">YANA Dietition Appointment </string>
    <string name="my_doctor_appointment">My Doctor Appointment</string>
    <string name="e_wallet">e-Wallet</string>
    <string name="change_password">Change Password</string>
    <string name="logout">LOGOUT</string>
>>>>>>> 37d7d36 (you profile update)
</resources>