<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:enabled="true"
        app:showAsAction="always"/>
    <item android:id="@+id/you"
        android:icon="@drawable/ic_happy"
        android:title="@string/you"
        android:enabled="true"
        app:showAsAction="always"/>
    <item android:id="@+id/placeholder"
        android:title="" />
    <item android:id="@+id/order"
        android:icon="@drawable/ic_order"
        android:title="@string/orders"
        android:enabled="true"
        app:showAsAction="always"/>
    <item android:id="@+id/service"
        android:icon="@drawable/ic_service"
        android:title="@string/services"
        android:enabled="true"
        app:showAsAction="always"/>
</menu>