<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.util.OrderByPrescctivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/camera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_outline_camera"/>
                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:gravity="center_horizontal"
                        android:text="@string/camera"
                        android:textSize="@dimen/text_mid"
                        android:ellipsize="end"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/saved_prescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_outline_saved"/>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:gravity="center_horizontal"
                        android:text="@string/saved_prescriptions"
                        android:ellipsize="end"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/gallery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_outline_insert_photo"/>
                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:gravity="center_horizontal"
                        android:text="@string/gallery"
                        android:ellipsize="end"/>
                </LinearLayout>

            </LinearLayout>
            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/border_light"/>
            <LinearLayout
                android:id="@+id/whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_prescription_via_whatsapp"
                    android:textSize="@dimen/text_mid"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_outline_whatsapp"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_whatsapp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_91_99xxxxxxxx"
                        android:layout_marginStart="5dp"
                        android:textSize="@dimen/text_mid" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/border_light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:padding="10dp"
                android:text="@string/valid_prescription_guide"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/border_light"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/protection"
                android:padding="5dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_protection"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/text_small"
                    android:text="@string/prescription_protection"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/border_light"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_note"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/text_extra_large" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/preferred_contact_number_optional"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:padding="10dp"
                android:text="@string/swaasthya_setu_communi"/>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purple_500"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_marginStart="-10dp"
                android:text="@string/hereby_declare"/>
            <ImageView
                android:id="@+id/info_t_and_c"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_info"/>
        </LinearLayout>
        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/purple_500"
            android:text="@string/submit"
            android:textSize="@dimen/text_extra_large"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>